style.css
body {
    margin: 0;
    padding: 0;
}

.verse-box {
    color: #bcbbbb;
    font-size: 15px;
    padding: 3px;
    overflow-y: scroll;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.verse {
    display: flex;
    flex-wrap: wrap;
}

.verse-link {
    display: flex;
    justify-content: flex-end;
}

